Fixed misaligned text in chat

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -210,6 +210,7 @@ body {
 
       p {
         font-size: 16px;
+        padding-left: 4rem;
       }
 
     }
